--- a/style.css
+++ b/style.css
@@ -38,10 +38,11 @@ header img{
 }
 .box_section{
     padding: 20px 30px;
+    flex-wrap: wrap;
 }
 .box1 img{
     width: 700px;
-    height: 200px;
+    height: 250px;
     padding: 10px;
     border-radius: 30px;
     
@@ -49,8 +50,8 @@ header img{
 .box1{
     display: flex;
     background-color: white;
-   
     border-radius: 30px;
+   
 }
 .box1 .content{
     padding: 20px;
@@ -74,10 +75,17 @@ header img{
     display: flex;
     align-items: center;
 }
-
+.side_boxs{
+    display: flex;
+    padding-top: 20px;
+    gap: 10px;
+    flex: 1 1 250px;
+    max-width: 2000px;
+    
+}
 .side_box1 img{
-    width: 500px;
-    height: 200px;
+    width: 300px;
+    height: 270px;
     border-radius: 30px;
     padding: 10px ;
 }
@@ -91,6 +99,7 @@ header img{
 .side_box1 .content{
     padding: 20px;
     flex-grow: 1;
+
 }
 .side_box1 .tag{
     border: none;
@@ -113,8 +122,8 @@ header img{
 }
 
 .side_box2 img{
-    width: 500px;
-    height: 200px;
+    width: 300px;
+    height: 270px;
     border-radius: 30px;
     padding: 10px;
 }
@@ -147,12 +156,7 @@ header img{
     align-items: center;
 }
 
-.side_boxs{
-    display: flex;
-    padding-top: 20px;
-    gap: 10px;
-    
-}
+
 .category_section {
   text-align: center;
   padding: 40px 20px;
@@ -171,97 +175,79 @@ header img{
   cursor: pointer;
   font-size: 14px;
 }
-.cards-section{
-    width: 500px;
-    padding: 0 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-
-   
-}
-.card1 img{
-    width: 500px;
-    height: 400px;
-    border-radius: 30px;
-    
-}
-
-.card-profile img{
-    width: 30px;
-   height: 30px;
-   border-radius: 50%;
+.cards-section {
+  display: flex;
+ justify-content: center;
+  margin: 10px 20px;
 
 }
-.card-profile{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-.tech{
-    margin-left: 200px;
-    border: none;
-    background-color: white;
-    color: blue;
-    font-size: 15px;
-    padding: 5px 10px;
-    border-radius: 30px;
-}
-.card2 img{
-    width: 500px;
-    height: 400px;
-    border-radius: 30px;
-    
+
+.cards {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap; 
+  padding: 20px ;
+  border-radius: 30px;
+  justify-content: center;
 }
 
-.card-profile img{
-    width: 30px;
-   height: 30px;
-   border-radius: 50%;
-
-}
-.card-profile{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-.tech{
-    margin-left: 200px;
-    border: none;
-    background-color: white;
-    color: blue;
-    font-size: 15px;
-    padding: 5px 10px;
-    border-radius: 30px;
-}
-.card3 img{
-    width: 500px;
-    height: 400px;
-    border-radius: 30px;
-    
+.card {
+  border-radius: 20px;
+  padding: 20px;
+  width: 300px;
+  flex: 0 0 auto; 
+ 
 }
 
-.card-profile img{
-    width: 30px;
-   height: 30px;
-   border-radius: 50%;
+.card img {
+  width: 100%;
+  height: 250px;
+  border-radius: 20px;
+  
+}
 
+.card-profile {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+  flex-wrap: wrap;
 }
-.card-profile{
-    display: flex;
-    align-items: center;
-    gap: 5px;
+
+.card-profile img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
-.tech{
-    margin-left: 200px;
-    border: none;
-    background-color: white;
-    color: blue;
-    font-size: 15px;
-    padding: 5px 10px;
-    border-radius: 30px;
+
+.tech {
+  margin-left: auto;
+  background-color: white;
+  color: blue;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  border: 1px solid #ccc;
 }
+.life{
+  margin-left: auto;
+  background-color: white;
+  color:purple;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  border: 1px solid #ccc;
+}
+.travel {
+  margin-left: auto;
+  background-color: white;
+  color: green;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  border: 1px solid #ccc;
+}
+
 .browse-btn {
   margin-top: 40px;
  margin-left: 50%;
@@ -279,10 +265,11 @@ header img{
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
+    padding: 10px 80px;
 }
 .author-card img{
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     margin-left: 10px;
     
@@ -292,10 +279,11 @@ header img{
     display: flex;
     align-items: center;
     gap: 5px;
-    width: 250px;
+    width: 300px;
     height: 100px;
     border-radius: 30px;
-    margin: 0;
+    padding: 10px ;
+
    
 }
 .author-cards{
@@ -303,22 +291,36 @@ header img{
     gap: 20px;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 20px 40px;
 
    
 }
 .newsletter-section {
-  background-color:white;
+  background-color:grey;
   margin: 40px;
   padding: 30px;
+ 
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
 
+}
+.news-content{
+    flex: 1 1 3500px;
+    max-width: 400px;
+    
+    
 }
 .newsletter-form {
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
+  align-items: center;
+   
+
 }
 .newsletter-form input{
   padding: 10px 15px;
@@ -335,4 +337,28 @@ header img{
   border-radius: 8px;
   font-size: 14px;
   
+}
+.site-footer {
+   display: flex;
+   justify-content: space-between;
+  padding: 20px 100px;
+  margin-top: 40px;
+  font-size: 14px;
+}
+.footer-links {
+  margin-top: 10px;
+}
+.footer-links a {
+  margin: 10px 10px;
+  color: black;
+  text-decoration: none;
+}
+.footer-links a:hover {
+  text-decoration: underline;
+}
+.footer-socials {
+  margin-top: 10px;
+}
+.footer-socials i {
+  margin: 10px 5px;
 }
